# qsp_antibiotic_cidal_static_immune

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
config/: calibrated_parameters.json  calibrated_parameters_cidal_FIXED.json  config_template.yaml  drug_library.yaml  model_parameters.yaml
data/external_validation/: DOSE_RESPONSE_SCOPE.md  README.md  WPD_SETUP.md  doxycycline_neutropenic_thigh.csv  doxycycline_pk_200mg.csv  doxycycline_timekill.csv  meropenem_neutropenic_thigh.csv  meropenem_pk_1g.csv  meropenem_timekill.csv  registry.json  sepsis_il6_kinetics.csv  wpd_to_csv.py
notebooks/: 01_core_model_demo.ipynb
scripts/: create_final_comparison.py  create_il6_fix_summary.py  create_literature_validation_comparison.py  extract_ml_results.py  fig2_calibration.py  fig5_to_10.py  render_schematic.py  run_external_validation.py  run_ml_training.py  run_simulation.py  save_key_results.py  supp_s5_resistance.py
src/: __init__.py
src/analysis/: __init__.py  dosing_optimization.py  external_validation.py  literature_validation.py  sensitivity_analysis.py
src/calibration/: __init__.py  calibration.py  calibration_improved.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_combination_therapy.py  test_dosing_optimization.py  test_external_validation.py  test_integration.py  test_integration_full.py  test_literature_validation.py  test_parallel_sim.py  test_parameters.py  test_pd_model.py  test_pk_models.py  test_resistance_evolution.py  test_sensitivity_analysis.py  test_sequential_therapy.py  test_simulation.py
(+18 files in other folders)
