[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-antibiotics"
version = "1.0.0"
description = "Quantitative Systems Pharmacology simulation framework for antibiotic resistance optimization"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "QSP Antibiotics Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "SALib>=1.4.8,<1.5",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "qsp-antibiotics[ml,dev]",
]

[project.scripts]
qsp = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.setuptools.package-dir]
src = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
